src/objects/Approval_Request__c.object
<CustomObject>
    <description>Object to capture the product and Onboarding  records which requires approval</description>
    <fields>
        <fullName>AML_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AML Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Info_on_this_Opportunity__c</fullName>
        <label>Additional Info on this Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Group_User__c</fullName>
        <label>Approver Group/User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Group__c</fullName>
        <label>Approver Group</label>
        <picklist>
            <picklistValues>
                <fullName>Client Service Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance - AML/KYC Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance - Code of Ethics Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance - Billing Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS - Risk Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS - Transition Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Compliance Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Questionnaire Approver Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance / Information Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Compliance (Back End) Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Alliance Department Heads Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading - Equity Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading - Fixed Income Group</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_at_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business At-Risk</label>
        <referenceTo>Business_at_Risk__c</referenceTo>
        <relationshipName>Fee_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFO_Acknowledgement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFO Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Service_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Service Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Service_Approver_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Heads_of_Global_Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Heads of Global Distribution</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_AML_KYC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance - AML/KYC Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_AML_KYC_app_req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_AML_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance - AML/KYC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corp_Finance_Billing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corp Finance - Billing Group</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Finance_Billing_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Finance - Billing Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corporate_Finance_Billing_Approver_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_Clinet_require_MFS_clause__c</fullName>
        <label>Does Client require MFN clause?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Fee__c</fullName>
        <label>Effective Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FATCA_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FATCA Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_Assessment__c</fullName>
        <label>Fee Schedule Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fee_Structure_Currency__c</fullName>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Structure Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Management Fee Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Acknowledgement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funds_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funds Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDS_Acknowledgement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDS Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guidelines__c</fullName>
        <label>Guidelines</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Guidelines</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_asset_transer_enter_Fee_Structure__c</fullName>
        <label>If asset transer, enter Fee Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiate_URF_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate URF Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approver_Id__c</fullName>
        <label>Last Approver Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Approver_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fee_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Follow_ups_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Follow ups Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PM_Approvals_Required__c</fullName>
        <label>Number of PM Approvals Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Performance_based_Fee__c</fullName>
        <label>Offering Performance based Fee?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onboarding_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onboarding Approval Requests</relationshipLabel>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportuinty_ProductId__c</fullName>
        <label>Opportuinty ProductId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Price__c</fullName>
        <label>Opportunity Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <label>Strategy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>Fee_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portfolio_Management_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortfolioManagementApprover_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortfolioManagementApprover_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Style__c</fullName>
        <label>Product Style</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summarise_existing_relationship_with_MFS__c</fullName>
        <label>Summarize existing relationship with MFS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Approval Request</label>
    <listViews>
        <fullName>AML_Lawyer_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>AML Lawyer</label>
        <queue>AML_Lawyer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Product__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Service_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Service Queue</label>
        <queue>Client_Service_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_AML_KYC_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance - AML/KYC Queue</label>
        <queue>Compliance_AML_KYC_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Code_of_Ethics_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance - Code of Ethics Queue</label>
        <queue>Compliance_Code_of_Ethics_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corporate_Finance_Billing_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Corporate Finance - Billing Queue</label>
        <queue>Corporate_Finance_Billing_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Distribution_Lawyer_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Distribution Lawyer</label>
        <queue>Distribution_Lawyer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FATCA_Lawyer_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>FATCA Lawyer</label>
        <queue>FATCA_Lawyer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Final_Approver_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Final Approver</label>
        <queue>Final_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Funds_Lawyer_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Funds Lawyer</label>
        <queue>Funds_Lawyer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GIS_Risk_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>GIS - Risk Queue</label>
        <queue>GIS_Risk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GIS_Transition_Management_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>GIS - Transition Management Queue</label>
        <queue>GIS_Transition_Management_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Insurance_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Insurance Queue</label>
        <queue>Insurance_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Investment_Compliance_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Investment Compliance Queue</label>
        <queue>Investment_Compliance_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Queue</label>
        <queue>Legal_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Approval Request - {000000}</displayFormat>
        <label>Approval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <recordTypes>
        <fullName>Fee_Approval_Request</fullName>
        <active>true</active>
        <description>Record type for fee approval request</description>
        <label>Fee Approval Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding_Approval_Request</fullName>
        <active>true</active>
        <description>Approval request for onboarding case</description>
        <label>Onboarding Approval Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>